# PV-SysReader

./: README.md  doxygen.conf
Protocol Specification/: Protocol_Specification.aux  Protocol_Specification.out  Protocol_Specification.tex  Protocol_Specification.toc  protocolspecification.kilepr
Protocol Specification/chapters/: BMV700.aux  BMV700.tex  BSINV.aux  BSINV.tex  MULTIQUAD.aux  MULTIQUAD.tex  VICTRONMPPT.aux  VICTRONMPPT.tex  multiplus.aux
src/: CMakeLists.txt  PV-SysReader.c
src/battery_monitors/: litrade_bms16p.c  litrade_bms16p.h  victron_bmv.c  victron_bmv.h
src/pv_chargers/: victron_mppt.c  victron_mppt.h
src/pv_inverters/: victron_bs.c  victron_bs.h  victron_mk2.c  victron_mk2.h
src/rs232/: rs232.c  rs232.h
